-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Query Optimization
-
Fully Compatible
-
ALL
-
QO 2025-02-03
-
None
-
None
-
None
-
None
-
None
-
None
-
None
> db.adminCommand({setParameter:1, planRankerMode: "heuristicCE"})
> db.c.insert({a: 1})
> db.c.find({"a":{"$mod":[-1,0]}}).explain()
MongoServerError: Invalid Selectivity value < minValue: (-1 < 0)
CBR generates a negative selectivity in this case.
- related to
-
SERVER-126443 CBR heuristicCE tasserts for $mod divisor LLONG_MIN
-
- Backlog
-