SERVER-99958 Handle negative divisor in CBR heuristic estimation of $mod (#31834)

GitOrigin-RevId: f34036c9834b295716839e2e82c6354833a5de2d